--- a/game/dreemlend/index.html
+++ b/game/dreemlend/index.html
@@ -1,3 +1,3 @@
 <canvas id="canvas">ur browser sucks</canvas>
 <p id='errorDisplay'></p>
-<script src="./e.js"></script>
+<script src="./game.js"></script>
