--- a/game/dreemlend/index.html
+++ b/game/dreemlend/index.html
@@ -1,3 +1,3 @@
 <style>body{padding: 0px;margin: 0px;}</style>
 <canvas id='canvas' width='900px' height='600px'>ur browser sucks</canvas>
-<script src='./Main.js'></script>
+<script src='./game.js'></script>
