--- a/game/dreemlend/index.html
+++ b/game/dreemlend/index.html
@@ -1,3 +1,46 @@
-<style>body{padding: 0px;margin: 0px;}</style>
-<canvas id='canvas' width='900px' height='600px'>ur browser sucks</canvas>
- <script src='game.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf8">
+        <link rel="shortcut icon" href="../../shefnews/kerb.ico" type="image/x-icon">
+        <title>Dreemlend Adventures - Shef Kerbi Game Studios</title>
+        <link href="../../fontawesome/css/all.css" rel="stylesheet">
+        <link href="../style.css" rel="stylesheet">
+        <link href="../stylejs.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <h1 class="centertext"><a href="index.html" style="text-decoration: none;">Shef Kerbi Game Studios</a></h1>
+            <br>
+            <h2 class="centertext">Dreemlend Adventures</h2>
+            <br>
+            <div id="fakejsgamecontainer">
+                <div id="fakejsgamestage"><embed src="./game.htm" width="485" height="402" frameborder="0"></iframe></div>
+                <div id="fakejsinstructions"><span style="font-weight: bold; font-size: 16px;">Instructions</span><br>
+                <p>Comming soon...</p>
+            </div>
+        </div>
+        <br>
+        <div id="main" class="footer">
+            <br>
+            <div id="footerflex">
+              <li style="font-size: 24px; font-weight: bold; text-align: center; width: 100%;"><a href="../index.html" id="shefwerldtext">Shef Werld</a></li>
+            </div>
+            <br>
+            <div id="footerflex">
+              <li><a href="../shefnews/index.html">Shef Kerbi News Network</a></li>
+              <li><a href="../clothingstore/index.html">Shef Kerbi's Apparel</a></li>
+              <li><a href="../shefmart/index.html">Shefmart</a></li>
+              <li><a href="../game/index.html">Shef Kerbi Game Studios</a></li><br>
+              <li><a href="../candysadness/index.html">Candy Sadness</a></li><br>
+            </div>
+            <div id="footerflex">
+              <li><a href="../about.html">About</a></li>
+              <li><a href="../history.html">History</a></li>
+              <li><a href="../updates.html">Updates</a></li>
+              <li><a href="../status.html">Server Status</a></li>
+            </div>
+            <p class="centertext">2018 - 2019 Shef Werld</p>
+          </div>
+    </body>
+</html>
