--- a/game/kerbi.html
+++ b/game/kerbi.html
@@ -4,77 +4,7 @@
         <meta charset="utf8">
         <link rel="shortcut icon" href="../shefnews/kerb.ico" type="image/x-icon">
         <title>Kerbi - Shef Kerbi Game Studios</title>
-        <style>
-        body    {
-            background-color: #241f29;
-        }
-        .container, .footer  {
-            width: 90%;
-            margin: auto;
-            background-color: #2e0e45;
-            padding: 8px;
-        }
-        *   {
-            font-family: "Comic Sans MS", 'Comic Sans', sans-serif;
-            color: #FFF;
-        }
-        .centertext {
-            text-align: center;
-        }
-        #flex   {
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-        .flexitem   {
-            border: 2px solid #FFFFFF;
-            background-color: #000000;
-            border-radius: 2px;
-            margin: auto;
-            padding: 12px;
-        }
-        #small {
-            flex-shrink: 20;
-        }
-        #large {
-            flex-grow: 2;
-        }
-        img, #inlinetext    {
-            display: inline;
-            align-self: flex-end;
-        }
-        #footerflex li {
-            flex-direction: column;
-            text-decoration: none;
-            list-style: none;
-            /* background-color: #FF0000; */ /* testing */
-            margin: 0 25px 5px 25px;
-        }
-        #footerflex {
-            display: flex;
-            justify-content: center;
-            width: 80%;
-            margin: auto;
-        }
-        #shefwerldtext  {
-            color: #FF9999; 
-            text-decoration: none;
-            transition: color 0.25s;
-        }
-        #shefwerldtext:hover  {
-            color: #770000;
-        }
-        #fakejsgamecontainer    {
-            display: flex;
-        }
-        #fakejsinstructions {
-            margin: 0 0 0 20px;
-            padding: 10px;
-            border: 1px solid #FFF;
-            background-color: #443344;
-        }
-        </style>
+        <link href="./style.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
